--- a/Slike/simulink_tq_control.tex
+++ b/Slike/simulink_tq_control.tex
@@ -12,6 +12,6 @@
 	{
 		\includegraphics[trim={2cm 4cm 2cm 3cm},scale=0.35]{./Slike/impedance_control.pdf}
 	}
-	\caption{Simulink sheme za vodenje v navornem na\v{c}inu. V shemo je vklju\v{c}eno stikalo za preklapljanje med hitrostnim ter navornim na\v{c}inom. Hitrostno vodenje smo uporabili za pozicioniranje v izhodično lego poskusa.}
+	\caption{Simulink sheme za vodenje v navornem na\v{c}inu. V shemo je vklju\v{c}eno stikalo za preklapljanje med hitrostnim ter navornim na\v{c}inom. Hitrostno vodenje smo uporabili za pozicioniranje robota v izhodi\v{c}no lego pred vsakih poskusom.}
 	\label{fig:simulink_tq_control}
 \end{figure}
