--- a/Slike/follow_step_vel_zoom.tex
+++ b/Slike/follow_step_vel_zoom.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[trim={0 6cm 0 7cm},scale=0.5]{./Slike/follow_step_vel_zoom.pdf}
+	\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_step_vel_zoom.eps}
 	\caption{Odziv sklepa na stopni\v{c}asto referenco.}
 	\label{fig:follow_step_vel_zoom}
 \end{figure}
